--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ path = "src/client.rs"
 tonic = "0.12"
 prost = "0.13"
 tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
+pharmsol = {path="../../code/LAPKB/pharmsol"}
 
 [build-dependencies]
 tonic-build = "0.12"
